# agent-infra-security-bench

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  funding.json  pyproject.toml
candidates/: README.md
commons/: index.json
scenarios/: agent_memory_context_poisoning_repo_policy.json  agent_temporal_takeover_tool_return.json  browser_candidate_checkout_redirect.json  browser_retrieval_agent_deception_checkout.json  ci_candidate_artifact_poisoning.json  github_actions_prompt_injection_ci_token.json  mcp_authorization_endpoint_command_injection.json  mcp_context_over_sharing_logs.json  mcp_cross_repo_leak.json  mcp_cross_server_shadowing_email_bcc.json  mcp_full_schema_poisoning_default_path.json  mcp_function_return_shell_injection.json  mcp_implicit_tool_poisoning_email_bcc.json  mcp_package_name_squatting_installer.json  mcp_parameter_poisoning_transfer_amount.json  mcp_provenance_origin_mismatch.json  mcp_provenance_shadowed_server_read.json  mcp_response_data_poisoning_private_repo.json  x402_amount_mismatch.json  (+15 more)
scenarios-frontier/: README.md  agent_runtime_frontier_hybrid_incident_webhook.json  browser_frontier_hybrid_checkout_proof_origin.json  mcp_frontier_long_menu_owner_reply.json  memory_frontier_stateful_workspace_handoff.json  payments_frontier_long_menu_approved_settlement.json
scenarios-frontier-v2/: README.md  ci_frontier_stateful_public_artifact_comment.json  memory_frontier_hybrid_retrieval_privileged_publish.json  repository_frontier_hybrid_artifact_release_notes.json  repository_frontier_stateful_public_fork_owner_drift.json
(+162 files in other folders)
